# push_swap

./: CMakeLists.txt  Makefile  Makefileff  README.md  author  checker  push_swap  realMakefile
checker.dSYM/Contents/Resources/DWARF/: checker
ft_printf/: Makefile  bonus_part.c  doublf.c  ft_fourth.c  ft_printf.c  ft_printf.h  ft_printf.h.gch  ft_rainbow.h.gch  ft_second.c  ft_third.c  ldoublf.c  ldoublf_part_6.c
ft_printf/libft/: MMakefile  ft_itoa_base.c  ft_memcpy.c  ft_strclr.c  ft_strdup.c  ft_strjoin.c  get_next_line.c  get_next_line.h  libft.h
ft_printf/libft/includes/: libft.h
includes/: ft_push_swap.h
libft/: Makefile
libft/includes/: get_next_line.h  libft.h  structs.h
libft/srcs/: ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstaddback.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_revmemcpy.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  (+25 more)
push_swap.dSYM/Contents/Resources/DWARF/: push_swap
src/: cleaner.c  extra_functions.c  ft_checker.c  ft_error.c  ft_push_swap.c  ft_stack.c  ft_validation.c  is_sorted.c  px.c  rotations.c  rrx.c  rx.c  sort_stacks.c  sorting_algorythm.c  sx.c
